--- a/Vinduer-&-Døre/index.html
+++ b/Vinduer-&-Døre/index.html
@@ -121,34 +121,30 @@
                                     <a href="/index.html">FORSIDE</a>
                                 </span>
                             </li>
-                            <li class="has-child ">
+                             <li class="has-child">
                                 <span>
-                                    <a href="/Tagarbejde/index.html">VI TILBYDER</a>
+                                    <a href="#" id="toggle-menu">VI TILBYDER</a>
                                 </span>
-                                <button class="expand-subpages" type="button" aria-expanded="false"
-                                    aria-label="Expand sub pages Transport">
-                                    <span aria-hidden="true">Expand sub
-                                        pages Transport</span>
+                                <button class="expand-subpages" type="button" aria-expanded="false" aria-label="Expand sub pages Transport">
+                                    <span aria-hidden="true">Expand sub pages Transport</span>
                                 </button>
-                                <ul>
-                                    <li class="no-child ">
+                                <ul id="submenu">
+                                    <li class="no-child">
                                         <span>
-                                            <a href="/Tagarbejde/index.html">Tilbygninger
-                                            </a>
+                                            <a href="/Tilbygninger/index.html">Tilbygninger</a>
                                         </span>
                                     </li>
-                                    <li class="no-child ">
+                                    <li class="no-child">
                                         <span>
-                                            <a href="/Tagarbejde/index.html">Tagarbejde
-                                            </a>
+                                            <a href="/Tagarbejde/index.html">Tagarbejde</a>
                                         </span>
                                     </li>
-                                    <li class="no-child ">
+                                    <li class="no-child">
                                         <span>
-                                            <a href="/Vinduer-&-Døre/index.html">Vinduer & Døre </a>
+                                            <a href="/Vinduer-&-Døre/index.html">Vinduer & Døre</a>
                                         </span>
                                     </li>
-                                    <li class="no-child ">
+                                    <li class="no-child">
                                         <span>
                                             <a href="/Tømrerarbejde/index.html">Tømrerarbejde</a>
                                         </span>
@@ -312,7 +308,7 @@
                                                 <li>
                                                     <p><strong>Perfekt Pasform, Garanteret:</strong>Vi sikrer, at dine
                                                         nye vinduer og døre bliver omhyggeligt
-                                                        målt og installeret, hvilket maksimerer energie ektiviteten og
+                                                        målt og installeret, hvilket maksimerer energi ektiviteten og
                                                         æstetikken. </p>
                                                 </li>
                                                 <li>
@@ -321,10 +317,8 @@
                                                         penge og mistede energibesparelser. </p>
                                                 </li>
                                                 <li>
-                                                    <p><strong>Fred i Sindet og Ekspertise:</strong>Vores professionelle
-                                                        håndterer alt fra tilpassede målinger
-                                                        til installation, hvilket sikrer et fejlfrit resultat og sparer
-                                                        dig tid og stress. </p>
+                                                    <p><strong>Fred i Sindet og Ekspertise:</strong>Vores professionelle håndværkere håndterer alt fra tilpassede målinger til installation, 
+                                                        hvilket sikrer et fejlfrit resultat og sparer dig tid og stress.</p>
                                                 </li>
 
                                             </ul>
@@ -604,13 +598,17 @@
                         </div>
                     </div>
                     <div class="item footer-item col-lg-3 py-sm-1 col-md-6">
-                        <div class="inner">
+                         <div class="inner">
                             <div class="info ">
-                                <p class="heading sm footer-heading ">Tømrermester Daniel Varle ApS</p>
+                                <p class="heading sm footer-heading">Tømrermester Daniel Varle ApS</p>
                                 <div class="text footer-text">
                                     <p>Violens Kvt 4A,<br>2620 Albertslund</p>
                                     <p>Telefon: &nbsp; <a href="tel:53272445">53 27 24 45</a></p>
                                     <p>E-mail: &nbsp;<a href="mailto:Kontakt@varle.dk ">Kontakt@varle.dk</a></p>
+                                </div>
+                                <div class="backlink">
+                                    <p>Vi er medlem af Dansk Håndværk Garanti</p>
+                                    <a href="https://dhv.dk/garantiordning-saadan-faar-du-kunder-med-logoer-og-grafik/"><img src="/assets/images/footer logo.png" alt="LOGO" style="height: 64px;width: auto;" ></a>
                                 </div>
                             </div>
                         </div>
@@ -669,6 +667,7 @@
 
 
     <script src="../../sb/sitebuilder-js-bundle.js.v1" type="text/javascript"></script>
+    <script src="/assets/images/js/header.js"></script>
 
 
 
