--- a/index.html
+++ b/index.html
@@ -108,40 +108,37 @@
                                     <a href="/index.html">FORSIDE</a>
                                 </span>
                             </li>
-                            <li class="has-child ">
+                            <li class="has-child">
                                 <span>
-                                    <a href="/Tagarbejde/index.html">VI TILBYDER</a>
+                                    <a href="#" id="toggle-menu">VI TILBYDER</a>
                                 </span>
-                                <button class="expand-subpages" type="button" aria-expanded="false"
-                                    aria-label="Expand sub pages Transport">
-                                    <span aria-hidden="true">Expand sub
-                                        pages Transport</span>
+                                <button class="expand-subpages" type="button" aria-expanded="false" aria-label="Expand sub pages Transport">
+                                    <span aria-hidden="true">Expand sub pages Transport</span>
                                 </button>
-                                <ul>
-                                    <li class="no-child ">
+                                <ul id="submenu">
+                                    <li class="no-child">
                                         <span>
-                                            <a href="/Tagarbejde/index.html">Tilbygninger
-                                            </a>
+                                            <a href="/Tilbygninger/index.html">Tilbygninger</a>
                                         </span>
                                     </li>
-                                    <li class="no-child ">
+                                    <li class="no-child">
                                         <span>
-                                            <a href="/Tagarbejde/index.html">Tagarbejde
-                                            </a>
+                                            <a href="/Tagarbejde/index.html">Tagarbejde</a>
                                         </span>
                                     </li>
-                                    <li class="no-child ">
+                                    <li class="no-child">
                                         <span>
-                                            <a href="/Vinduer-&-Døre/index.html">Vinduer & Døre </a>
+                                            <a href="/Vinduer-&-Døre/index.html">Vinduer & Døre</a>
                                         </span>
                                     </li>
-                                    <li class="no-child ">
+                                    <li class="no-child">
                                         <span>
                                             <a href="/Tømrerarbejde/index.html">Tømrerarbejde</a>
                                         </span>
                                     </li>
                                 </ul>
                             </li>
+                            
                             <li class="no-child ">
                                 <span>
                                     <a href="/Referencer/index.html">REFERENCER</a>
@@ -268,7 +265,7 @@
                                         data-os-animation="fadeInLeft" data-os-animation-delay="0s"
                                         data-os-animation-duration="0,8s">
                                         <div class="inner   ">
-                                            <a href="transport/fisk/index.html">
+                                            <a href="/Tilbygninger/index.html">
                                                 <div class="image  ">
                                                     <picture>
                                                         <source type="image/webp" width="30px" height="30px">
@@ -281,7 +278,7 @@
                                                 </div>
                                                 <div class="info ">
                                                     <p class="secondary-heading sm base-secondary-heading "></p>
-                                                    <p class="heading sm base-heading ">Vi
+                                                    <p class="heading sm base-heading ">
                                                         VI SKABER EN TRYGHED FOR DIG
                                                     </p>
 
@@ -301,7 +298,7 @@
                                         data-os-animation="fadeInLeft" data-os-animation-delay="0s"
                                         data-os-animation-duration="0,8s">
                                         <div class="inner   ">
-                                            <a href="transport/bulkgods/index.html">
+                                            <a href="/Tagarbejde/index.html">
                                                 <div class="image  ">
                                                     <picture>
                                                         <source type="image/webp" width="300px" height="300px">
@@ -332,7 +329,7 @@
                                         data-os-animation="fadeInLeft" data-os-animation-delay="0s"
                                         data-os-animation-duration="0,8s">
                                         <div class="inner   ">
-                                            <a href="transport/toergods/index.html">
+                                            <a href="/Vinduer-&-Døre/index.html">
                                                 <div class="image  ">
                                                     <picture>
                                                         <source type="image/webp" width="300px" height="300px">
@@ -365,7 +362,7 @@
                                         data-os-animation="fadeInLeft" data-os-animation-delay="0s"
                                         data-os-animation-duration="0,8s">
                                         <div class="inner   ">
-                                            <a href="kontakt-os/index.html">
+                                            <a href="/Tømrerarbejde/index.html">
                                                 <div class="image  ">
                                                     <picture>
                                                         <source type="image/webp" width="300px" height="300px">
@@ -669,8 +666,13 @@
                                     <p>Telefon: &nbsp; <a href="tel:53272445">53 27 24 45</a></p>
                                     <p>E-mail: &nbsp;<a href="mailto:Kontakt@varle.dk ">Kontakt@varle.dk</a></p>
                                 </div>
+                                <div class="backlink">
+                                    <p>Vi er medlem af Dansk Håndværk Garanti</p>
+                                    <a href="https://dhv.dk/garantiordning-saadan-faar-du-kunder-med-logoer-og-grafik/"><img src="/assets/images/footer logo.png" alt="LOGO" style="height: 64px;width: auto;" ></a>
+                                </div>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
                 <!--// Row -->
@@ -731,7 +733,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-
+    <script src="/assets/images/js/header.js"></script>
 </body>
 <!--
     ____        _ ____              _ __  __             _____ __   _                      __
