Code updated |Ref|latest

--- a/Referencer/index.html
+++ b/Referencer/index.html
@@ -272,7 +272,7 @@
                                             <img src="/assets/images/intImg01.jpg" alt="">
                                         </div>
                                         <div class="col-lg-3 mt-2">
-                                            <img src="/assets/images/intImg02.jpg" alt="">
+                                            <img src="/assets/images/IntImg02.jpg" alt="">
                                         </div>
                                         <div class="col-lg-3 mt-2">
                                             <img src="/assets/images/intImg03.jpg" alt="">
