--- a/Tagarbejde/index.html
+++ b/Tagarbejde/index.html
@@ -98,7 +98,7 @@
                 <div class="row">
 
                     <div id="logo">
-                        <a href="/index.html" title=" TØMRERMESTER DANIEL VARLE APS ">
+                        <a href="/" title=" TØMRERMESTER DANIEL VARLE APS ">
                             <img src="/assets/images/Logo.png" alt>
                         </a>
                     </div>
@@ -111,15 +111,15 @@
                     </button>
                     <!--// Expand -->
 
-                    <!-- Main navigation -->
+                   <!-- Main navigation -->
                     <nav aria-label="Main" class="main nav-dropdown navigation-dropdown-bg-solid">
                         <ul>
                             <li class="no-child ">
                                 <span>
-                                    <a href="/index.html">FORSIDE</a>
+                                    <a href="/">FORSIDE</a>
                                 </span>
                             </li>
-                             <li class="has-child">
+                            <li class="has-child">
                                 <span>
                                     <a href="#" id="toggle-menu">VI TILBYDER</a>
                                 </span>
@@ -129,39 +129,40 @@
                                 <ul id="submenu">
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Tilbygninger/index.html">Tilbygninger</a>
+                                            <a href="/Tilbygninger">Tilbygninger</a>
                                         </span>
                                     </li>
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Tagarbejde/index.html">Tagarbejde</a>
+                                            <a href="/Tagarbejde">Tagarbejde</a>
                                         </span>
                                     </li>
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Vinduer-&-Døre/index.html">Vinduer & Døre</a>
+                                            <a href="/Vinduer-&-Døre">Vinduer & Døre</a>
                                         </span>
                                     </li>
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Tømrerarbejde/index.html">Tømrerarbejde</a>
+                                            <a href="/Tømrerarbejde">Tømrerarbejde</a>
                                         </span>
                                     </li>
                                 </ul>
                             </li>
+                            
                             <li class="no-child ">
                                 <span>
-                                    <a href="/Referencer/index.html">REFERENCER</a>
+                                    <a href="/Referencer">REFERENCER</a>
                                 </span>
                             </li>
                             <li class="no-child ">
                                 <span>
-                                    <a href="/Om-virksomheden/index.html">Om virksomheden</a>
+                                    <a href="/Om-virksomheden">Om virksomheden</a>
                                 </span>
                             </li>
                             <li class="no-child ">
                                 <span>
-                                    <a href="/kontakt-os/index.html">KONTAKT</a>
+                                    <a href="/kontakt-os">KONTAKT</a>
                                 </span>
                             </li>
                         </ul>
@@ -552,7 +553,7 @@
                         <div class="row d-flex flex-column">
                             <div class="col-lg-8">
                                 <div id="logo">
-                                    <a href="/index.html" title="T. S&#xF8;gaard Logistics A/S">
+                                    <a href="/" title="T. S&#xF8;gaard Logistics A/S">
                                         <img src="/assets/images/Logo.png" alt style="height: 60px; width: auto;">
                                         <p class="mt-2">Tømrermester Daniel Varle ApS <br> Eksperter i tømrerarbejde med
                                             fokus på kvalitet, holdbarhed og skræddersyede løsninger, der
@@ -596,38 +597,39 @@
                             <p class="heading sm footer-heading " data-os-animation="fadeInUp"
                                 data-os-animation-delay="0s" data-os-animation-duration="1s">Hvad kan vi hjælpe med?
                             </p>
-                             <!-- Quick Links -->
-                            <nav class="d-flex flex-row" aria-label="Quick links" class="quick-links " data-os-animation="fadeInUp"
-                                data-os-animation-delay="0s" data-os-animation-duration="1s">
+                            <!-- Quick Links -->
+                            <nav class="d-flex flex-row" aria-label="Quick links" class="quick-links "
+                                data-os-animation="fadeInUp" data-os-animation-delay="0s"
+                                data-os-animation-duration="1s">
                                 <ul>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
-                                            <a style="font-size: 17px;" href="/Tilbygninger/index.html">Tilbygninger
+                                            <a style="font-size: 17px;" href="/Tilbygninger/">Tilbygninger
                                             </a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
-                                            <a style="font-size: 17px;" href="/Tagarbejde/index.html">Tagarbejde
+                                            <a style="font-size: 17px;" href="/Tagarbejde/">Tagarbejde
                                             </a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
-                                            <a style="font-size: 17px;" href="/Tømrerarbejde/index.html">Vinduer
+                                            <a style="font-size: 17px;" href="/Tømrerarbejde/">Vinduer
                                                 & Døre</a> </a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
                                             <a style="font-size: 17px;"
-                                                href="/Tømrerarbejde/index.html">Tømrerarbejde</a>
+                                                href="/Tømrerarbejde/">Tømrerarbejde</a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
                                             <a style="font-size: 17px;"
-                                                href="/Om-virksomheden/index.html">Om virksomheden</a>
+                                                href="/Om-virksomheden/">Om virksomheden</a>
                                         </span>
                                     </li>
                                 </ul>
@@ -636,7 +638,7 @@
                         </div>
                     </div>
                     <div class="item footer-item col-lg-3 py-sm-1 col-md-6">
-                         <div class="inner">
+                        <div class="inner">
                             <div class="info ">
                                 <p class="heading sm footer-heading">Tømrermester Daniel Varle ApS</p>
                                 <div class="text footer-text">
@@ -650,6 +652,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
                 <!--// Row -->
@@ -690,7 +693,6 @@
 
         </div> -->
         </footer>
-
         <!--// Footer -->
 
 
