--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <div class="row">
 
                     <div id="logo">
-                        <a href="index.html" title=" TØMRERMESTER DANIEL VARLE APS ">
-                            <img src="assets/images/Logo.png" alt>
+                        <a href="/" title=" TØMRERMESTER DANIEL VARLE APS ">
+                            <img src="/assets/images/Logo.png" alt>
                         </a>
                     </div>
 
@@ -105,7 +105,7 @@
                         <ul>
                             <li class="no-child ">
                                 <span>
-                                    <a href="/index.html">FORSIDE</a>
+                                    <a href="/">FORSIDE</a>
                                 </span>
                             </li>
                             <li class="has-child">
@@ -118,22 +118,22 @@
                                 <ul id="submenu">
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Tilbygninger/index.html">Tilbygninger</a>
+                                            <a href="/Tilbygninger">Tilbygninger</a>
                                         </span>
                                     </li>
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Tagarbejde/index.html">Tagarbejde</a>
+                                            <a href="/Tagarbejde">Tagarbejde</a>
                                         </span>
                                     </li>
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Vinduer-&-Døre/index.html">Vinduer & Døre</a>
+                                            <a href="/Vinduer-&-Døre">Vinduer & Døre</a>
                                         </span>
                                     </li>
                                     <li class="no-child">
                                         <span>
-                                            <a href="/Tømrerarbejde/index.html">Tømrerarbejde</a>
+                                            <a href="/Tømrerarbejde">Tømrerarbejde</a>
                                         </span>
                                     </li>
                                 </ul>
@@ -141,17 +141,17 @@
                             
                             <li class="no-child ">
                                 <span>
-                                    <a href="/Referencer/index.html">REFERENCER</a>
+                                    <a href="/Referencer">REFERENCER</a>
                                 </span>
                             </li>
                             <li class="no-child ">
                                 <span>
-                                    <a href="/Om-virksomheden/index.html">Om virksomheden</a>
+                                    <a href="/Om-virksomheden">Om virksomheden</a>
                                 </span>
                             </li>
                             <li class="no-child ">
                                 <span>
-                                    <a href="/kontakt-os/index.html">KONTAKT</a>
+                                    <a href="/kontakt-os">KONTAKT</a>
                                 </span>
                             </li>
                         </ul>
@@ -573,7 +573,7 @@
                         <div class="row d-flex flex-column">
                             <div class="col-lg-8">
                                 <div id="logo">
-                                    <a href="index.html" title="T. S&#xF8;gaard Logistics A/S">
+                                    <a href="/" title="T. S&#xF8;gaard Logistics A/S">
                                         <img src="/assets/images/Logo.png" alt style="height: 60px; width: auto;">
                                         <p class="mt-2">Tømrermester Daniel Varle ApS <br> Eksperter i tømrerarbejde med
                                             fokus på kvalitet, holdbarhed og skræddersyede løsninger, der
@@ -624,32 +624,32 @@
                                 <ul>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
-                                            <a style="font-size: 17px;" href="/Tilbygninger/index.html">Tilbygninger
+                                            <a style="font-size: 17px;" href="/Tilbygninger/">Tilbygninger
                                             </a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
-                                            <a style="font-size: 17px;" href="/Tagarbejde/index.html">Tagarbejde
+                                            <a style="font-size: 17px;" href="/Tagarbejde/">Tagarbejde
                                             </a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
-                                            <a style="font-size: 17px;" href="/Tømrerarbejde/index.html">Vinduer
+                                            <a style="font-size: 17px;" href="/Tømrerarbejde/">Vinduer
                                                 & Døre</a> </a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
                                             <a style="font-size: 17px;"
-                                                href="/Tømrerarbejde/index.html">Tømrerarbejde</a>
+                                                href="/Tømrerarbejde/">Tømrerarbejde</a>
                                         </span>
                                     </li>
                                     <li class="no-child mt-3 fs-5">
                                         <span>
                                             <a style="font-size: 17px;"
-                                                href="/Om-virksomheden/index.html">Om virksomheden</a>
+                                                href="/Om-virksomheden/">Om virksomheden</a>
                                         </span>
                                     </li>
                                 </ul>
